# whatever

./: .gitignore  .gitmodules  Makefile  README.md
client/: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  conanfile.py  docker-compose.yml
client/cmake/: Dependencies.cmake  DependencyFinder.cmake  DownloadUsingCPM.cmake  QtDeploy.cmake  SimdUtils.cmake  TargetUtils.cmake  TestUtils.cmake
client/cmake/dependencies/: Boost.cmake  OpenCV.cmake  Protobuf.cmake  Qt.cmake
client/cmake/helpers/: BuildDirHelper.cmake
client/conan_profiles/: gcc15
client/qt/qml/: Main.qml  Main.qml.backup
client/qt/resources/: models.qrc
client/scripts/: android.py  build.py  configure.py  download-models.py  format.py  install_deps.py  lint.py
client/src/: main.cpp
client/src/comm/: CMakeLists.txt
client/src/comm/include/client/comm/: bluetooth.hpp  export.hpp  pch.hpp  protocol.hpp
client/src/comm/src/: bluetooth.cpp  pch.cpp  protocol.cpp
client/src/core/: CMakeLists.txt
client/src/core/include/client/core/: assert.hpp  core.hpp  logger.hpp  pch.hpp
client/src/core/include/client/core/utils/: fast_pimpl.hpp  filesystem.hpp
client/src/core/src/: assert.cpp  logger.cpp  pch.cpp
client/src/runtime/: CMakeLists.txt
client/src/runtime/include/client/: core.hpp  pch.hpp
client/src/runtime/include/client/app/: app.hpp  app_return_code.hpp  camera.hpp  face_data.hpp  face_tracker.hpp  frame.hpp  gui_window.hpp  model_config.hpp  settings_manager.hpp
client/src/runtime/src/: app.cpp  camera.cpp  face_tracker.cpp  frame.cpp  gui_window.cpp  pch.cpp  settings_manager.cpp
client/tests/: CMakeLists.txt
client/tests/comm/: CMakeLists.txt
client/tests/comm/unit/: bluetooth.cpp  main.cpp  protocol.cpp
client/tests/core/: CMakeLists.txt
client/tests/core/integration/: logger.cpp
client/tests/core/unit/: assert.cpp  core.cpp  logger.cpp
client/tests/core/unit/utils/: fast_pimpl.cpp  filesystem.cpp
client/tests/runtime/: CMakeLists.txt
client/tests/runtime/integration/: app_integration.cpp  gui_integration.cpp.bak
client/tests/runtime/unit/app/: app.cpp  app_return_code.cpp  camera.cpp  face_data.cpp  face_tracker.cpp  frame.cpp  gui_window.cpp  model_config.cpp
embedded/: .clangd  CMakeLists.txt  CMakePresets.json  Makefile
embedded/cmake/: Dependencies.cmake  IdfUtils.cmake  TargetUtils.cmake
embedded/cmake/helpers/: TestHelper.cmake
embedded/components/bluetooth_spp/: CMakeLists.txt  bluetooth_spp.cpp  idf_component.yml
embedded/components/bluetooth_spp/include/: bluetooth_spp.hpp
embedded/components/proto_nanopb/: CMakeLists.txt  idf_component.yml
embedded/components/servo/: CMakeLists.txt  README.md  idf_component.yml  servo_controller.cpp
embedded/components/servo/include/: servo_controller.hpp
embedded/main/: CMakeLists.txt  main.cpp
embedded/scripts/: format.py  install_deps.py  lint.py
embedded/tests/: CMakeLists.txt
embedded/tests/integration/: CMakeLists.txt
embedded/tests/unit/: CMakeLists.txt
proto/: messages.options  messages.proto
